cambiamos las rutas

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="../mi-repositorio/pages/productos.html">Productos</a></li>
-          <li><a class="dropdown-item" href="../mi-repositorio/pages/sobre-nosotros.html">Sobre nosotros</a></li>
-          <li><a class="dropdown-item" href="../mi-repositorio/pages/ubicacion.html">Ubicación</a></li>
-          <li><a class="dropdown-item" href="../mi-repositorio/pages/contacto.html">Contacto</a></li>
+          <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+          <li><a class="dropdown-item" href="./pages/sobre-nosotros.html">Sobre nosotros</a></li>
+          <li><a class="dropdown-item" href="./pages/ubicacion.html">Ubicación</a></li>
+          <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -48,7 +48,7 @@
 
   <section class="productos text-center">
     <article data-aos="fade-up" class="card" style="width: 18rem;">
-      <img src="../mi-repositorio/img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius de pomelo">
+      <img src="./img/pomelo-removebg-preview.png" class="card-img-top" alt="Aquarius de pomelo">
       <div class="card-body">
         <h5 class="card-title">Aquarius 1,5lts x6</h5>
         <p class="card-text">$2250</p>
@@ -57,7 +57,7 @@
     </article>
 
     <article data-aos="fade-up" class="card" style="width: 18rem;">
-      <img src="../mi-repositorio/img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="Coca-Cola">
+      <img src="./img/coca-cola-2-25-605e3e44e0694-removebg-preview.png" class="card-img-top" alt="Coca-Cola">
       <div class="card-body">
         <h5 class="card-title">Coca-cola 2,25lts x6</h5>
         <p class="card-text">$3620</p>
