cambiamos rutas en el footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </article>
 
     <article data-aos="fade-up" class="card" style="width: 18rem;">
-      <img src="../mi-repositorio/img/gordon-removebg-preview.png" class="card-img-top" alt="Gin Gordon's">
+      <img src="./img/gordon-removebg-preview.png" class="card-img-top" alt="Gin Gordon's">
       <div class="card-body">
         <h5 class="card-title">Gin Gordon's 700ml x6</h5>
         <p class="card-text">$13200</p>
@@ -75,7 +75,7 @@
     </article>
 
     <article  data-aos="fade-up" class="card nampe" style="width: 18rem;">
-      <img src="../mi-repositorio/img/nampe-removebg-preview.png" class="card-img-top" alt="Vino Nampe">
+      <img src="./img/nampe-removebg-preview.png" class="card-img-top" alt="Vino Nampe">
       <div class="card-body">
         <h5 class="card-title">Nampe Malbec 750ml x6</h5>
         <p class="card-text">$5520</p>
